--- a/templates/create.html
+++ b/templates/create.html
@@ -4,7 +4,7 @@
   <form action="{{ url_for('create') }}" method=post class=add-entry>
     <dl>
       <dt>Platform name:
-      <dd><input type=text size=30 name=name>
+      <dd><input type=text size=30 name=name placeholder="Do not use CAPS!!!>
       <dd><input type=submit value=Create>
     </dl>
   </form>
